@startuml

'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

title US15 - List Employees by Role (Class Diagram)


class ListEmployeesByRoleUI {

}


class ListEmployeesByRoleController {

  +listEmployeesByRole(roleName : String) : List<StaffMember>
}


class StaffMember {

  + name : String
  + postalAddress : String
  + phone : String
  + email : String
}

class Receptionist extends StaffMember
class Nurse extends StaffMember
class DGSAdministrator extends StaffMember

class StaffRepository {

  +findByRole(roleName : String) : List<StaffMember>
}

ListEmployeesByRoleUI ..> ListEmployeesByRoleController

ListEmployeesByRoleController ..> StaffRepository

StaffRepository "1" --> "0..*" StaffMember : manages >
@enduml
